--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+/*@import 'questions'
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
+form {
+  justify-content: center;
+  align-items: baseline;
+}
+*/
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
+form {
+  justify-content: center;
+  align-items: baseline;
+}
